--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 	 		background-size: 5%;
 	 	}
 
-	 	/*.banners:hover{
+		.banners:hover{
 	 		background-size: 5.5%;
 	 		transition: all 2s;
 	 		background-position: center;
 	 	}
-*/
 	 	.cardhovers:hover{
 	 		box-shadow: -7px 5px 3px rgba(0, 0, 0, 0.3);
 	 	}
